@@ -101,6 +101,9 @@ Extension modules
 Library
 -------
 
+- traceback.format_exc has been added (similar to print_exc but it returns
+  a string).
+
 - xmlrpclib.MultiCall has been added.
 
 - poplib.POP3_SSL has been added.
